--- a/index.html
+++ b/index.html
@@ -1,154 +1,1 @@
-<!DOCTYPE html><html lang="en" data-theme="dark"><head>
-    <!--Meta-->
-    <title>The BOcT</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U">
-    <meta name="author" content="U-C-S">
-    <meta name="description" content="Meet the BOcT">
-    <link rel="icon" href="assets/robot.ico">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="preconnect" href="https://www.google-analytics.com/" crossorigin>
-
-    <!--CSS-->
-    <link rel="stylesheet" href="styles/boct.css">
-    <link rel="stylesheet" href="styles/boctmediaq.css" media="screen and (max-width: 960px)">
-
-    <!--PWA-->
-    <meta name="application-name" content="The-BOcT">
-    <meta name="theme-color" content="#E64C63">
-    <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png">
-    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest">
-
-    <!--Scripts-->
-    <script defer src="scripts/domElements.js"></script>
-    <script defer src="scripts/index.js"></script>
-    <script defer src="scripts/settings.js"></script>
-    <script defer src="scripts/talk-script.js"></script>
-    <script defer src="scripts/unit-convert.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
-    <script defer>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "UA-172329807-1");
-    </script>
-  </head>
-  <body>
-    <!-- main -->
-    <div id="Main">
-      <div class="PageHead">
-        <div id="heading_container"><h1 id="heading">The BOcT</h1></div>
-        <div class="bot-head">
-          <button id="BOcT" href="javascript:void(0);" title="The BOcT">
-            <svg viewBox="0 0 640 512"><path id="svg0"/></svg>
-          </button>
-        </div>
-      </div>
-
-      <div id="Chatter">
-        <div class="talk_box" id="chatspace">
-          <!-- CHAT HTML goes here --->
-        </div>
-        <!-- Type bar --->
-        <div class="type_box">
-          <form class="type_box-inner" action="javascript:void(0);">
-            <input id="typespace" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="120" spellcheck="true">
-            <button id="typespace-enter" type="submit">
-              <svg viewBox="0 0 448 512"><path id="svg1"/></svg>
-            </button>
-          </form>
-        </div>
-      </div>
-
-      <div class="about">
-        <fieldset>
-          <legend>About BOcT</legend>
-          <div class="aboutbtns">
-            <button id="settingBtn" title="Settings">
-              <svg viewBox="0 0 512 512"><path id="svg2"/></svg>
-            </button>
-            <button id="infoBtn" title="Info">
-              <svg viewBox="0 0 512 512"><path id="svg3"/></svg>
-            </button>
-            <button id="ThemeBtn" data-themenow="dark" title="Toggle Dark/Light Mode">
-              <svg viewBox="0 0 512 512"><path id="svg4"/></svg>
-            </button>
-          </div>
-          <p id="releaseVer">Version 3.4 | Jan 2021</p>
-          <button id="pwaInstallBtn">install</button>
-          <hr>
-          <p>BOcT is a Static Browser Chatbot</p>
-          <p>It&apos;s currently in Lazy Development</p>
-          <p>Future Updates to BOcT can make it perform basic Maths, Maybe suggest you some Movies...</p>
-        </fieldset>
-      </div>
-    </div>
-
-    <!-- Fake Loading screen --->
-    <!--Create a Lazy load for loading screen-->
-    <div id="loadScreen">
-      <div class="load">
-        <div id="load_barr"></div>
-        <div id="load_text">BOcT Loading...</div>
-      </div>
-    </div>
-
-    <!-- iPopUp --->
-    <div id="info_popup">
-      <div class="info_window">
-        <div class="info_content">
-          <p>Some commands for interesting replies:</p>
-          <ul>
-            <li>What is your age / your age</li>
-            <li>Annoy me / idiot</li>
-            <li>google/youtube/bing/duckduckgo *word*</li>
-            <li>roll a dice / roll dice</li>
-            <li>flip a coin / toss a coin</li>
-          </ul>
-          <hr>
-          <p>Also, BOcT can perform some unit-conversions in Length, Areas, Mass, Temperatures and Volume.</p>
-          <p>To Perform unit-conversions: conv XA to B</p>
-          <p>X: unit value | A: the base unit | B: the output unit</p>
-          <p>Ex: conv 100cm to m (outputs 1m)</p>
-          <hr>
-          <p>some DOt Commands:</p>
-          <ul>
-            <li>.name</li>
-            <li>.age</li>
-            <li>.god</li>
-            <li>.v</li>
-            <li>.code</li>
-            <li>.dice</li>
-            <li>.coin</li>
-          </ul>
-        </div>
-        <div class="info_links">
-          <a href="https://github.com/The-BOcT/the-boct.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">&#xA9; 2020 U-C-S</a><br>
-          <a href="https://github.com/The-BOcT/the-boct.github.io/">View Source</a>
-        </div>
-        <p class="text1">Written with &#x2764; in TypeScript</p>
-        <button id="info_close">close</button>
-      </div>
-    </div>
-
-    <!--Off-Canvas menu for Settings--->
-    <aside class="settingbar">
-      <h2>BOcT Settings</h2>
-      <label class="stg_contain">Open Chatbox by Default: <input type="checkbox" id="stg_chat_open_default"></label>
-
-      <label class="stg_contain">Disable Load Screen: <input type="checkbox" id="stg_disable_load"></label>
-
-      <button class="stg_btn">Clear your Settings</button>
-
-      <button id="stg_clearchat" class="stg_btn">Clear the Chat</button>
-    </aside>
-  
-
-</body></html>
+<!doctype html><html lang="en" data-theme="dark"><head><title>The BOcT</title><meta name="viewport" content="width=device-width,initial-scale=1"/><meta charset="utf-8"/><meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U"/><meta name="author" content="U-C-S"/><meta name="description" content="Meet the BOcT"/><link rel="icon" href="assets/robot.ico"/><link rel="preconnect" href="https://www.googletagmanager.com/"/><link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin/><link rel="preconnect" href="https://www.google-analytics.com/" crossorigin/><meta name="application-name" content="The-BOcT"/><meta name="theme-color" content="#E64C63"/><link rel="apple-touch-icon" sizes="128x128" href="assets/robot128.png"/><link rel="manifest" type="application/manifest+json; charset=utf-8" href="boct.webmanifest"/><link href="/static/css/main.4eede4d5.chunk.css" rel="stylesheet"></head><body><div id="Main"></div><script defer="defer" src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script><script defer="defer">function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-172329807-1")</script><script>!function(e){function t(t){for(var n,a,i=t[0],c=t[1],l=t[2],s=0,p=[];s<i.length;s++)a=i[s],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&p.push(o[a][0]),o[a]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(f&&f(t);p.length;)p.shift()();return u.push.apply(u,l||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,i=1;i<r.length;i++){var c=r[i];0!==o[c]&&(n=!1)}n&&(u.splice(t--,1),e=a(a.s=r[0]))}return e}var n={},o={1:0},u=[];function a(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,a),r.l=!0,r.exports}a.e=function(e){var t=[],r=o[e];if(0!==r)if(r)t.push(r[2]);else{var n=new Promise((function(t,n){r=o[e]=[t,n]}));t.push(r[2]=n);var u,i=document.createElement("script");i.charset="utf-8",i.timeout=120,a.nc&&i.setAttribute("nonce",a.nc),i.src=function(e){return a.p+"static/js/"+({}[e]||e)+"."+{3:"08c3cf0a"}[e]+".chunk.js"}(e);var c=new Error;u=function(t){i.onerror=i.onload=null,clearTimeout(l);var r=o[e];if(0!==r){if(r){var n=t&&("load"===t.type?"missing":t.type),u=t&&t.target&&t.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,r[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:i})}),12e4);i.onerror=i.onload=u,document.head.appendChild(i)}return Promise.all(t)},a.m=e,a.c=n,a.d=function(e,t,r){a.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,t){if(1&t&&(e=a(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(a.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)a.d(r,n,function(t){return e[t]}.bind(null,n));return r},a.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(t,"a",t),t},a.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},a.p="/",a.oe=function(e){throw console.error(e),e};var i=this["webpackJsonpthe-boct"]=this["webpackJsonpthe-boct"]||[],c=i.push.bind(i);i.push=t,i=i.slice();for(var l=0;l<i.length;l++)t(i[l]);var f=c;r()}([])</script><script src="/static/js/2.2f3bf67d.chunk.js"></script><script src="/static/js/main.4a79bf38.chunk.js"></script></body></html>
